# FeynmanAPI

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  INSTALLATION.md  MANIFEST.in  README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: tests.yml
contrib/qgraf/models/: electroweak.mod  qcdqed.mod  qed.mod
contrib/texmf/tex/latex/standalone/: standalone.cls
docs/: loops.md
examples/: end_to_end_example.ipynb  for_bsm_theorist.ipynb  for_lhc_experimentalist.ipynb  for_undergrad_qft.ipynb  getting_started.ipynb  nlo_quickstart.ipynb  nlo_quickstart.py
feynman_engine/: __init__.py  __main__.py  diagnostics.py  engine.py  form.py  lhapdf.py  looptools.py  openloops.py  qgraf.py
feynman_engine/amplitudes/: __init__.py  analytic_integrals.py  approximate.py  color.py  cross_section.py  cs_dipoles.py  cs_dipoles_ol.py  cs_kp_operators.py  differential.py  dipole_subtraction.py  ee_to_tt_massive.py  ee_zz_helicity.py  enubar_wz_helicity.py  form_trace.py  hadronic.py  jet_clustering.py  loop.py  loop_curated.py  loop_tensor_reduction.py  looptools_bridge.py  n_body_decays.py  nlo_cross_section.py  nlo_cross_section_openloops.py  nlo_ew_finite.py  nlo_ew_general.py  nlo_general.py  nlo_qed_general.py  openloops_amplitude.py  openloops_bridge.py  openloops_install_jobs.py  pdf.py  pdg_masses.py  phase_space.py  qqbar_ww_helicity.py  renorm.py  symbolic.py  three_body_dalitz.py  three_body_decays.py  types.py
feynman_engine/api/: app.py  routes.py  schemas.py
feynman_engine/core/: enumerator.py  generator.py  models.py  normalize.py  parser.py  topology.py
feynman_engine/frontend/: app.js  index.html  styles.css
feynman_engine/physics/: amplitude.py  nlo_k_factors.py  registry.py  translator.py  trust.py
feynman_engine/physics/theories/: bsm.py  electroweak.py  qcd.py  qed.py
feynman_engine/render/: compiler.py  tikz.py
feynman_engine/resources/looptools/: LoopTools-2.16.tar
feynman_engine/resources/openloops/: __init__.py  catalog.json  catalog_generator.py
feynman_engine/resources/qgraf/models/: bsm.mod  qcd.mod  qed.mod
feynman_engine/resources/qgraf/styles/: feynman.sty
frontend/: app.js  index.html  styles.css
tests/: test_amplitudes_symbolic.py  test_analytic_integrals.py  test_cli_setup.py  test_cs_color_correlated_i.py  test_cs_dipoles_ol.py  test_cs_kp_operators.py  test_curated_validation.py  test_decays.py  test_differential.py  test_ee_zz_helicity.py  test_electroweak.py  test_enubar_wz.py  test_enumerator.py  test_example_process_api.py  test_generator.py  test_jet_clustering.py  test_loop_tensor_reduction.py  test_n_body_decays.py  test_new_curated_formulas.py  test_nlo_ew_finite.py  test_nlo_general.py  test_nlo_qed.py  test_normalize.py  test_openloops_bridge.py  test_openloops_catalog.py  test_openloops_install_jobs.py  test_parser.py  test_particle_metadata.py  test_pdf_hadronic.py  test_phase3ac.py  test_qcd.py  test_qqbar_ww_helicity.py  test_registry.py  test_tau_resonances.py  test_three_body_dalitz.py  test_topology.py  test_translator.py
tests/fixtures/: qed_tree_bhabha.txt  qed_tree_ee_mumu.txt
