[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feynman-engine"
version = "0.1.4"
description = "Feynman diagram generator + amplitude/cross-section calculator wrapping QGRAF, FORM, LoopTools, OpenLoops, and LHAPDF"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Elijah Cavan", email = "elijah@baseballtradevalues.com" },
]
maintainers = [
    { name = "Elijah Cavan", email = "elijah@baseballtradevalues.com" },
]
keywords = [
    "particle physics",
    "feynman diagrams",
    "scattering amplitudes",
    "quantum field theory",
    "QFT",
    "qgraf",
    "form",
    "looptools",
    "openloops",
    "lhapdf",
    "drell-yan",
    "NLO",
    "EW Sudakov",
    "Catani-Seymour",
    "parton distribution functions",
    "fastapi",
    "tikz-feynman",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Environment :: Console",
]
dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sympy>=1.12",
    "particle>=0.26,<0.27",
    "hepunits>=2.3",
    "scipy>=1.11",
    # httpx is needed for fastapi.testclient, which the example notebooks use
    # to call the API in-process. Tiny dep (~200 KB).
    "httpx>=0.26",
]

[project.urls]
Homepage = "https://github.com/ecavan/FeynmanAPI"
Repository = "https://github.com/ecavan/FeynmanAPI"
Documentation = "https://github.com/ecavan/FeynmanAPI/blob/main/README.md"
"Installation Guide" = "https://github.com/ecavan/FeynmanAPI/blob/main/INSTALLATION.md"
"Citation (CFF)" = "https://github.com/ecavan/FeynmanAPI/blob/main/CITATION.cff"
"DOI (Zenodo)" = "https://doi.org/10.5281/zenodo.19673075"
Issues = "https://github.com/ecavan/FeynmanAPI/issues"
"Source Code" = "https://github.com/ecavan/FeynmanAPI"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
]
# Optional LHAPDF backend for proton PDFs.  The pip wheel pulls in the
# LHAPDF6 C++ library; PDF *sets* (e.g. CT18LO) are downloaded separately
# via `lhapdf install <SetName>`.  When unavailable the package falls back
# to the built-in LO-simple parametrization automatically.
lhapdf = [
    "lhapdf>=6.5",
]
# Optional Vegas adaptive Monte Carlo (Lepage) for high-multiplicity NLO
# real-emission integration.  Without it the engine uses flat RAMBO MC.
vegas = [
    "vegas>=6.0",
]

[project.scripts]
feynman = "feynman_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["feynman_engine*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
feynman_engine = [
    "resources/qgraf/*.tgz",
    "resources/qgraf/models/*.mod",
    "resources/qgraf/styles/*.sty",
    "resources/looptools/*.tar",
    "resources/form/*.tar.gz",
    "resources/lhapdf/*.tar.gz",
    "resources/openloops/*.tar.gz",
    "frontend/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
